Update writeup.md